--- a/views/layout.njk
+++ b/views/layout.njk
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/home">Logan Nul</a>
+        <a class="navbar-brand" href="/home">Home</a>
         <button
           class="navbar-toggler"
           type="button"
