show game by slug

--- a/views/games_slug.njk
+++ b/views/games_slug.njk
@@ -1,1 +1,8 @@
+{% extends "layout.njk" %}
 <h1>Game slug page</h1>
+{% block content %}
+<h1>game description</h1>
+<img src="{{ game.cover_url }}" />
+<h2>{{ game.name }}</h2>
+<p>{{ game.summary }}</p>
+{% endblock %}
