update file platform njk

--- a/views/platform.njk
+++ b/views/platform.njk
@@ -2,8 +2,7 @@
 <h1>Games page</h1>
 
 {% for platform in platforms %}
-<div class="card" style="width: 14rem">
-  <h5 class="card-title">{{ platform.name }}</h5>
-</div>
+
+<p>{{ platform.name }}</p>
 
 {% endfor %} {% endblock %}
