--- a/views/platform.njk
+++ b/views/platform.njk
@@ -1,8 +1,8 @@
 {% extends "layout.njk" %} {% block content %}
-<h1>Games page</h1>
+<h1>platforms page</h1>
 
-{% for platform in platforms %}
+{% for platfor in platform %}
 
-<p>{{ platform.name }}</p>
+<p>{{ platfor.name }}</p>
 
 {% endfor %} {% endblock %}
