--- a/views/games.njk
+++ b/views/games.njk
@@ -10,7 +10,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ game.name }}</h5>
           <p class="card-text d-md-flex justify-content-md-start">
-            {{ game.price / 100 }} $
+            {{ game.price }} $
           </p>
         </div>
         <div class="card-footer">
