--- a/views/games.njk
+++ b/views/games.njk
@@ -6,7 +6,7 @@
 
     <div class="col">
       <div class="card h-100">
-        <img src="{{ game.cover }}" class="card-img-top" alt="..." />
+        <img src="{{ game.cover.url }}" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">{{ game.name }}</h5>
           <p class="card-text d-md-flex justify-content-md-start">
