--- a/views/platform.njk
+++ b/views/platform.njk
@@ -1,8 +1,8 @@
 {% extends "layout.njk" %} {% block content %}
 <h1>platforms page</h1>
 
-{% for platfor in platform %}
+{% for platform in platform %}
 
-<p>{{ platfor.name }}</p>
+<a href="/games/{{platform.slug}}">{{platform.name}}</a>
 
 {% endfor %} {% endblock %}
