--- a/views/layout.njk
+++ b/views/layout.njk
@@ -10,9 +10,15 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
-    {% block css %}{% endblock %}
+    <script src="https://kit.fontawesome.com/476c89e3e9.js" crossorigin="anonymous"></script>
     <title>Document</title>
   </head>
+  <style>
+    body {
+    background-image: url("../assets/images/background.jpeg");
+    background-repeat: repeat-y;
+  }
+  </style>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -49,5 +55,6 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   </body>
 </html>
