--- a/views/games_slug.njk
+++ b/views/games_slug.njk
@@ -1,4 +1,15 @@
 {% extends "layout.njk" %} {% block content %}
+<style>
+
+.card {
+    height: 40rem;
+    background: -moz-linear-gradient(-45deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+    background: -webkit-linear-gradient(-45deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(135deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 );
+  }
+
+</style>
 <br />
 <div class="container">
   <div class="card mb-3">
@@ -10,23 +21,23 @@
       </div>
       <div class="col-md-12">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: justify; text-align: center; margin-bottom: 1rem; margin-top: 1rem;">{{ game.name }}</h5>
-          <p class="card-text" style="text-align: justify; text-align: center;">{{ game.summary }}</p>
-          <p class="card-text" style="text-align: justify; text-align: center;">{{ game.price / 100 }}$</p>
+          <h5 class="card-title" style="text-align: justify; text-align: center; margin-bottom: 1rem; margin-top: 1rem; color:white;">{{ game.name }}</h5>
+          <p class="card-text" style="text-align: justify; text-align: center; color:white;">{{ game.summary }}</p>
+          <p class="card-text" style="text-align: justify; text-align: center; color: white;">{{ game.price / 100 }}$</p>
           <div class="d-grid col-4 mx-auto">
-          <button 
-          src=""
+          <a 
+          href="../payment"
           class="btn"
           type="button"
           style="
             font-size: 3em;
             color: white;
-            background-color:limegreen;
+            background-color:orange;
             height: 5rem;
             border-radius: 6px;
             ">
           Achat
-        </button>
+          </a>
         </div>
           <p class="card-text">
             <small class="text-muted">Last updated 3 mins ago</small>
