--- a/views/payment.njk
+++ b/views/payment.njk
@@ -90,7 +90,7 @@ input {
                             <div class="col-sm-3">
                                 <p class="text-warning mb-0">Cvv</p> <input type="password" name="cvv" placeholder="&#9679;&#9679;&#9679;" size="3" minlength="3" maxlength="3">
                             </div>
-                            <div class="col-sm-5 pt-0"> <button type="button" class="btn btn-primary"><i class="fas fa-arrow-right px-3 py-2"></i></button> </div>
+                            <div class="col-sm-5 pt-0"> <a href="../comfirmedPurchase"><button type="button" class="btn btn-primary"><i class="fas fa-arrow-right px-3 py-2"></i></button> </a></div>
                         </div>
                     </div>
                 </form>
