fixed navbar for all pages

--- a/views/games.njk
+++ b/views/games.njk
@@ -32,7 +32,7 @@
 </style>
 <br />
 <div class="container">
-  <h1 class="text-center" style="color: white">Games</h1>
+  <h1 class="text-center" style="color: white; margin-top: 3rem;">Games</h1>
   <br />
   <div class="row row-cols-1 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 g-4">
     {% for game in games %}
