--- a/views/home.njk
+++ b/views/home.njk
@@ -1,5 +1,7 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-<h1>Home Page</h1>
+
+    <img src="https://images.frandroid.com/wp-content/uploads/2020/11/xbox-playstation-pc-nintendo.jpg" class="img-fluid" style="width: 100%" alt="..." />
+
 {% endblock %}
