--- a/views/platform.njk
+++ b/views/platform.njk
@@ -32,7 +32,8 @@
 </style>
 
 <div class="container">
-  <h1 class="text-center" style="color: white">Platforms</h1>
+<br /><br /><br />
+  <h1 class="text-center" style="color: white;">Platforms</h1>
   <br />
   <div class="row row-cols-1 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 g-4">
     {% for platfor in platform %}
