--- a/views/platform_slug.njk
+++ b/views/platform_slug.njk
@@ -33,7 +33,7 @@
 
 <div class="container">
   <br />
-  <h1 class="text-center" style="text-transform: uppercase; color: white">
+  <h1 class="text-center" style="text-transform: uppercase; color: white; margin-top: 3rem;">
     {{ gamesForPlatform[0].platform.name }}
   </h1>
   <br />
