--- a/views/layout.njk
+++ b/views/layout.njk
@@ -18,12 +18,18 @@
   </head>
   <style>
     body {
+      margin: 0;
+      padding: 0;
       background-image: url("../assets/images/background.jpeg");
       background-repeat: repeat-y;
     }
+    .navbar {
+      position: fixed;
+      width: 100%;
+      z-index: 1;
+    }
   </style>
   <body>
-
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient">
             <div class="container-fluid" >
