Correcting variables' spelling and adding not-found route

--- a/views/platforms.njk
+++ b/views/platforms.njk
@@ -36,12 +36,12 @@
   <h1 class="text-center" style="color: white;">Platforms</h1>
   <br />
   <div class="row row-cols-1 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 g-4">
-    {% for platfor in platform %}
+    {% for platform in platforms %}
 
     <div class="col">
       <div class="card h-100">
         <img
-          src="{{ platfor.platform_logo_url }}"
+          src="{{ platform.platform_logo_url }}"
           class="card-img-top"
           alt="..."
           style="height: 18rem; border: solid white 2px"
