--- a/views/layout.njk
+++ b/views/layout.njk
@@ -68,9 +68,10 @@
       
                   </li>
                 </ul>
-                <form class="d-flex">
+                <form class="d-flex" method="post" action="/search">
                   <input
                     class="form-control me-2"
+                    name="searchInput"
                     type="search"
                     placeholder="Search"
                     aria-label="Search"
