--- a/views/confirmed.njk
+++ b/views/confirmed.njk
@@ -1,11 +1,10 @@
-{% extends "layout.njk" %} 
-
-{% block content %}
+{% extends "layout.njk" %} {% block content %}
 
 <div style="text-align: center">
-    <h1>THANK YOU</h1>
-<p>For your purchase ! </p>
+  <br />
+  <br />
+  <h1>THANK YOU</h1>
+  <p>For your purchase !</p>
 </div>
-
 
 {% endblock %}
