correction fichier platforms

--- a/views/platforms.njk
+++ b/views/platforms.njk
@@ -48,12 +48,12 @@
         />
         <div class="card-body">
           <h5 class="card-title" style="color: white; text-align: center">
-            {{ platfor.name }}
+            {{ platform.name }}
           </h5>
         </div>
         <div class="card-footer">
           <a
-            href="platforms/{{ platfor.slug }}"
+            href="platforms/{{ platform.slug }}"
             class="btn btn-dark d-grid gap-2 col-6 mx-auto"
             style="background-color: orange; color: white"
             >See more!</a
