--- a/views/games.njk
+++ b/views/games.njk
@@ -30,9 +30,71 @@
     border-top: solid black 2px;
   }
 </style>
+<div class="col-lg-12">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/home" style="color: white">Home</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarScroll"
+        aria-controls="navbarScroll"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul
+          class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll"
+          style="--bs-scroll-height: 100px"
+        >
+          <li class="nav-item">
+            <a class="nav-link active" href="/games" style="color: white"
+              >Games</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/platforms" style="color: white"
+              >Platforms</a
+            >
+          </li>
+
+          <li class="nav-item1">
+            {#
+            <a class="nav-link active" href="/login" style="color: white"
+              >Logged : {{ checkingLoggin }}</a
+            >
+            #} {% if checkingLoggin %}
+            <a class="nav-link active" href="/logout" style="color: white"
+              >Logout</a
+            >
+            {% else %}
+            <a class="nav-link active" href="/login" style="color: white"
+              >Login</a
+            >
+            {% endif %}
+          </li>
+        </ul>
+        <form class="d-flex" method="post" action="/search">
+          <input
+            class="form-control me-2"
+            name="searchInput"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+</div>
+
 <br />
 <div class="container">
-  <h1 class="text-center" style="color: white; margin-top: 3rem;">Games</h1>
+  <h1 class="text-center" style="color: white; margin-top: 3rem">Games</h1>
   <br />
   <div class="row row-cols-1 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 g-4">
     {% for game in games %}
